--- a/widgets/menus/menu.scss
+++ b/widgets/menus/menu.scss
@@ -4,8 +4,6 @@
   margin: 0;
   padding: 0.5rem;
   min-width: 10rem;
-  max-height: 20rem;
-  max-width: 20rem;
   overflow: hidden auto;
 }
 
